# realmkbot

./: .gitignore  .infisical.json  Cargo.toml  README.md  build.rs  flake.nix  result  rust-toolchain.toml
.github/workflows/: docker.yml
src/: db.rs  main.rs  tdlib.rs  tg.rs  util.rs
