[package]
name = "realmkbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", default-features = false }
tokio = { version = "1.28.0", features = ["fs", "macros", "rt", "signal"] }
figment = { version = "0.10.8", features = ["env", "json", "toml"] }
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }

tap = "1.0.1"
dotenvy = "0.15.7"
log = "0.4.17"
dirs = "5.0.1"
pretty_env_logger = "0.4.0"
serde_json = "1.0.96"
rusqlite_migration = "1.0.2"
redacted_debug = "0.2.0"
grammers-client = "0.7.0"
