[package]
name = "realmkbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammers-client = { version = "0.7.0", git = "https://github.com/Lonami/grammers" }
grammers-mtsender = { version = "0.7.0", git = "https://github.com/Lonami/grammers" }
color-eyre = { version = "0.6.5", default-features = false }
tokio = { version = "1.48.0", features = ["fs", "macros", "rt", "signal"] }
figment = { version = "0.10.19", features = ["env", "json", "toml"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
futures = { version = "0.3.31", default-features = false }

tap = "1.0.1"
dotenvy = "0.15.7"
log = "0.4.28"
dirs = "6.0.0"
pretty_env_logger = "0.5.0"
serde_json = "1.0.145"
rusqlite_migration = "2.3.0"
redacted_debug = "0.2.0"

[build-dependencies]
anyhow = "1.0.100"
vergen = { version = "9.0.6", features = ["build"] }
vergen-gitcl = { version = "1.0.8", features = ["build"] }
